--- a/pom.xml
+++ b/pom.xml
@@ -29,20 +29,64 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>h2</id>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+
+                    </dependency>
+                </dependencies>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.2.2</version>
+                <configuration>
+                        <url>jdbc:mysql://localhost:3306/bookdb?unicode=true&amp;characterEncoding=UTF-8&amp;serverTimeZoe=UTC</url>
+                        <outputChangeLogFile>changelog.xml</outputChangeLogFile>
+                        <changeSetAuthor>Maneesh</changeSetAuthor>
+                        <changelogSchemaName>bookdb</changelogSchemaName>
+                        <username>bookadmin</username>
+                        <password>passwd</password>
+                    <!--                    <propertyFileWillOverride>true</propertyFileWillOverride>-->
+<!--                    <propertyFile>target/classes/liquibase.properties</propertyFile>-->
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql.version}</version>
+                    </dependency>
+
+                </dependencies>
             </plugin>
         </plugins>
     </build>
